Add Mac setup guide for bioinformatics documentation
- Add comprehensive Mac setup documentation split into 11 pages
- Cover Xcode CLI tools, Homebrew, CLI utilities, GitHub, VS Code,
  Dracula theme, Mambaforge, R/RStudio, shell customization, and
  troubleshooting
- Include screenshots for visual reference
- Update navigation to add Mac setup as first group in Misc. Bioinformatics

--- a/misc-bioinfo/index.mdx
+++ b/misc-bioinfo/index.mdx
@@ -8,6 +8,9 @@ description: Other bioinformatics topics and useful tools
 This section covers other bioinformatics topics that don't fit neatly into the other categories.
 
 <CardGroup cols={2}>
+  <Card title="Mac Setup for Bioinformatics" icon="apple" href="/misc-bioinfo/mac-setup/index">
+    Complete guide to setting up your Mac for bioinformatics workflows
+  </Card>
   <Card title="Getting Started" icon="rocket" href="/misc-bioinfo/getting-started">
     General bioinformatics resources
   </Card>
@@ -17,6 +20,7 @@ This section covers other bioinformatics topics that don't fit neatly into the o
 
 Topics in this section may include:
 
+- **Mac setup guides** for bioinformatics development
 - Useful scripting tips for bioinformatics
 - Data visualization
 - Database resources and APIs
