--- a/misc-bioinfo/mac-setup/terminal-theme.mdx
+++ b/misc-bioinfo/mac-setup/terminal-theme.mdx
@@ -43,6 +43,8 @@ Or install through the VS Code Extensions marketplace by searching for "Dracula 
 - **Syntax Highlighting**: Better color contrast makes code more readable
 - **Consistency**: Use the same theme across Terminal, VS Code, and other applications
 
+Let's be real. Aesthetics are important. If it looks good you'll feel good while you're working. Is that true? I don't know, but I believe it.
+
 ## Other Applications
 
 The Dracula theme is available for many other applications, allowing you to maintain a consistent color scheme across your development environment:
