--- a/misc-bioinfo/mac-setup/index.mdx
+++ b/misc-bioinfo/mac-setup/index.mdx
@@ -1,12 +1,11 @@
 ---
 title: Mac Setup for Bioinformatics
-description: A comprehensive guide to setting up your Mac with essential tools for bioinformatics research
 icon: apple
 ---
 
 Setting up a new Mac for bioinformatics work can feel overwhelming with the sheer number of tools. This guide will walk you through installing and configuring the essential tools you need to get started with computational biology workflows. Whether you're analyzing genomic data, building phylogenetic trees, or developing bioinformatics pipelines, this setup will provide a solid foundation.
 
-Thank you to CC for the impetus to making this. I've given it to a lot of people who have found it very useful!
+<small>Thank you to CC for the impetus to making this. I've given it to a lot of people who have found it very useful!</small>
 
 <CardGroup cols={2}>
   <Card title="Prerequisites" icon="hammer" href="/misc-bioinfo/mac-setup/prerequisites">
