--- a/protein-engineering/index.mdx
+++ b/protein-engineering/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Protein Engineering
+title: Overview
 description: Tools and workflows for protein structure prediction, design, and analysis
 ---
 
