--- a/misc-bioinfo/mac-setup/index.mdx
+++ b/misc-bioinfo/mac-setup/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overview
 icon: apple
+toc: false
 ---
 
 Setting up a new Mac for bioinformatics work can feel overwhelming with the sheer number of tools. This guide will walk you through installing and configuring the essential tools you need to get started with computational biology workflows. Whether you're analyzing genomic data, building phylogenetic trees, or developing bioinformatics pipelines, this setup will provide a solid foundation.
