--- a/protein-engineering/index.mdx
+++ b/protein-engineering/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overview
 description: Tools and workflows for protein structure prediction, design, and analysis
+toc: false
 ---
 
 # Protein Engineering
