Add Twist Bioscience gene ordering guide
- Create ordering-from-twist.mdx with step-by-step workflow for standard clonal gene orders
- Update docs.json navigation to include new Twist guide in Miscellaneous Bioinformatics tab
- Add card reference to new guide in misc-bioinfo index

--- a/misc-bioinfo/index.mdx
+++ b/misc-bioinfo/index.mdx
@@ -12,6 +12,9 @@ This section covers other bioinformatics topics that don't fit neatly into the o
   <Card title="Mac Setup for Bioinformatics" icon="apple" href="/misc-bioinfo/mac-setup/index">
     Complete guide to setting up your Mac for bioinformatics workflows
   </Card>
+  <Card title="Ordering Genes from Twist" icon="dna" href="/misc-bioinfo/ordering-from-twist">
+    Step-by-step workflow for placing clonal gene orders in Twist Bioscience
+  </Card>
 </CardGroup>
 
 ## What's Covered
