Reorganize Twist ordering guide images to standard location

--- a/misc-bioinfo/ordering-from-twist.mdx
+++ b/misc-bioinfo/ordering-from-twist.mdx
@@ -22,82 +22,82 @@ Use this workflow for standard gene orders in our lab.
 
 Click **New Order**, then select **Gene** (highlighted in red).
 
-![Twist step 1: choose Gene](/Ordering_From_Twist/1.png)
+![Twist step 1: choose Gene](/images/ordering-from-twist/1.png)
 
 ### 2. Name the project and start it
 
 Enter a project name, then click **Start New Project**.
 
-![Twist step 2: name project and start](/Ordering_From_Twist/2.png)
+![Twist step 2: name project and start](/images/ordering-from-twist/2.png)
 
 ### 3. Choose **Clonal Genes**
 
 Select **Clonal Genes** for this workflow.
 
-![Twist step 3: choose clonal genes](/Ordering_From_Twist/3.png)
+![Twist step 3: choose clonal genes](/images/ordering-from-twist/3.png)
 
 ### 4. Choose sequence upload method
 
 Twist offers multiple sequence input options.
 
-![Twist step 4: upload options](/Ordering_From_Twist/4.png)
+![Twist step 4: upload options](/images/ordering-from-twist/4.png)
 
 ### 5. Upload your FASTA
 
 Drag and drop your FASTA file into the upload area.
 
-![Twist step 5: drag FASTA file](/Ordering_From_Twist/5.png)
+![Twist step 5: drag FASTA file](/images/ordering-from-twist/5.png)
 
 ### 6. Use the *E. coli* codon usage table
 
 Choose the *E. coli* codon usage table.
 
-![Twist step 6: e coli codon usage](/Ordering_From_Twist/6.png)
+![Twist step 6: e coli codon usage](/images/ordering-from-twist/6.png)
 
 ### 7. Choose the custom vector
 
 Choose **Custom Vector** and select **BGal Pet-29 b(+)_Ndel_Xhol**.
 
-![Twist step 8: custom vector selection](/Ordering_From_Twist/8.png)
+![Twist step 8: custom vector selection](/images/ordering-from-twist/8.png)
 
 ### 8. Continue once the construct is ready
 
 When setup is complete, click **Continue** (highlighted in red).
 
-![Twist step 9: continue](/Ordering_From_Twist/9.png)
+![Twist step 9: continue](/images/ordering-from-twist/9.png)
 
 ### 9. Set custom reading frame
 
 Click **Custom Reading Frame** and select the whole protein.
 
-![Twist step 12: custom reading frame](/Ordering_From_Twist/12.png)
+![Twist step 12: custom reading frame](/images/ordering-from-twist/12.png)
 
 ### 10. Choose the *E. coli* custom reading frame
 
 Select the *E. coli* custom reading frame.
 
-![Twist step 13: e coli reading frame](/Ordering_From_Twist/13.png)
+![Twist step 13: e coli reading frame](/images/ordering-from-twist/13.png)
 
 ### 11. Select sites to avoid introducing
 
 Open the setting where you choose restriction sites to avoid.
 
-![Twist step 14: sites to avoid](/Ordering_From_Twist/14.png)
+![Twist step 14: sites to avoid](/images/ordering-from-twist/14.png)
 
 ### 12. Confirm selected restriction sites
 
 Confirm that **Nhol** and **Xhol** are selected (as shown).
 
-![Twist step 15: selected restriction sites](/Ordering_From_Twist/15.png)
+![Twist step 15: selected restriction sites](/images/ordering-from-twist/15.png)
 
 ### 13. Regions to preserve
 
 For our workflows, this is almost never used. Click **Continue**.
 
-![Twist step 16: regions to preserve](/Ordering_From_Twist/16.png)
+![Twist step 16: regions to preserve](/images/ordering-from-twist/16.png)
 
 ### 14. Save optimized sequence
 
 After optimization completes, click **Save**.
 
-![Twist step 17: save optimized sequence](/Ordering_From_Twist/17.png)
+![Twist step 17: save optimized sequence](/images/ordering-from-twist/17.png)
