--- a/misc-bioinfo/mac-setup/index.mdx
+++ b/misc-bioinfo/mac-setup/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Mac Setup for Bioinformatics
+description: Step-by-step setup guide for a macOS bioinformatics development environment
 icon: apple
 toc: false
 ---
@@ -27,8 +28,8 @@ Setting up a new Mac for bioinformatics work can feel overwhelming with the shee
   <Card title="Terminal Theme" icon="palette" href="/misc-bioinfo/mac-setup/terminal-theme">
     Dracula theme for better aesthetics
   </Card>
-  <Card title="Mambaforge" icon="snake" href="/misc-bioinfo/mac-setup/mambaforge">
-    Fast conda package management
+  <Card title="Miniforge + Mamba" icon="snake" href="/misc-bioinfo/mac-setup/mambaforge">
+    Fast conda/mamba package management
   </Card>
   <Card title="R & RStudio" icon="chart-line" href="/misc-bioinfo/mac-setup/r-rstudio">
     Statistical computing powerhouse
@@ -51,6 +52,6 @@ For the best experience, follow the guides in this order:
 4. **GitHub** - Set up version control
 5. **VS Code** - Configure your editor
 6. **Terminal Theme** - (Optional) Beautify your terminal
-7. **Mambaforge** - Set up conda/mamba for bioinformatics packages
+7. **Miniforge + Mamba** - Set up conda/mamba for bioinformatics packages
 8. **R & RStudio** - Install R ecosystem
 9. **Shell Customization** - Add helpful aliases and functions
