--- a/misc-bioinfo/mac-setup/mambaforge.mdx
+++ b/misc-bioinfo/mac-setup/mambaforge.mdx
@@ -1,10 +1,10 @@
 ---
-title: Mambaforge - Fast Conda Package Management
-description: Install Mambaforge for blazing-fast bioinformatics package management
+title: Miniforge + Mamba
+description: Install Miniforge with mamba for fast, reliable bioinformatics package management
 icon: snake
 ---
 
-# Mambaforge: Fast Conda Package Management
+# Miniforge + Mamba
 
 <div style={{textAlign: 'center'}}>
 
@@ -12,14 +12,14 @@ icon: snake
 
 </div>
 
-[Mambaforge](https://github.com/conda-forge/miniforge#mambaforge) combines conda with mamba, providing blazing-fast package management that's essential for bioinformatics workflows.
+[Miniforge](https://github.com/conda-forge/miniforge) is the recommended lightweight conda distribution from conda-forge. It includes conda and works seamlessly with mamba for fast package solving.
 
 ## Installation
 
 ```bash
-# Download and install Mambaforge
-curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Mambaforge-$(uname)-$(uname -m).sh"
-bash Mambaforge-$(uname)-$(uname -m).sh
+# Download and install Miniforge
+curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
+bash Miniforge3-$(uname)-$(uname -m).sh
 ```
 
 Follow the installation prompts and allow it to initialize your shell.
@@ -66,17 +66,18 @@ mamba create -n phylo -c conda-forge -c bioconda \
 ## Useful Practices with Mamba
 
 ```bash
-# Always activate base environment first
-mamba activate
+# Use strict channel priority for reproducibility
+conda config --set channel_priority strict
 
-# Update regularly
-mamba update --all
+# Activate base and update core tooling
+mamba activate base
+mamba update --name base --all
 
 # Clean up unused packages
 mamba clean --all
 
 # Export environments for reproducibility
-mamba env export > environment.yml
+mamba env export --from-history > environment.yml
 ```
 
 ## Environment Management
