fix: correct restriction enzyme names in Twist ordering guide
Fix typos in enzyme names: Ndel→NdeI, Nhol→NdeI, Xhol→XhoI.

--- a/misc-bioinfo/ordering-from-twist.mdx
+++ b/misc-bioinfo/ordering-from-twist.mdx
@@ -56,7 +56,7 @@ Choose the *E. coli* codon usage table.
 
 ### 7. Choose the custom vector
 
-Choose **Custom Vector** and select **BGal Pet-29 b(+)_Ndel_Xhol**.
+Choose **Custom Vector** and select **BGal Pet-29 b(+)_NdeI_XhoI**.
 
 ![Twist step 8: custom vector selection](/images/ordering-from-twist/8.png)
 
@@ -86,7 +86,7 @@ Open the setting where you choose restriction sites to avoid.
 
 ### 12. Confirm selected restriction sites
 
-Confirm that **Nhol** and **Xhol** are selected (as shown).
+Confirm that **NdeI** and **XhoI** are selected (as shown).
 
 ![Twist step 15: selected restriction sites](/images/ordering-from-twist/15.png)
 
